@@ -1056,6 +1056,21 @@ annotation|@
 name|Test
 specifier|public
 name|void
+name|testAddedFlattenedRelationship
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|test
+argument_list|(
+literal|"testAddedFlattenedRelationship"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
 name|testFilteringConfig
 parameter_list|()
 throws|throws
